Добавлена новая реализация сервера. Добавлено подключение к бд.